HelloUltraviolet/Fixtures/RejectedSource/Expressions/YieldFromOutMismatch/Expected.uv
//! Expected diagnostic metadata for the YieldFromOutMismatch rejected-source specimen.

expectedDiagnostic("E-CON-0221", "rule.21.YieldFrom-Out-Err")
